force-app/main/default/objects/Wholesale_Commissions__c/Wholesale_Commissions__c.object-meta.xml
<CustomObject>
    <label>Wholesale Commissions</label>
    <nameField>
        <label>Wholesale Commissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wholesale Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>