force-app/main/default/objects/Wholesale_Commissions__c/fields/AE_SB__c.field-meta.xml
<CustomField>
    <fullName>AE_SB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AE/SB</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>