force-app/main/default/objects/Wholesale_Commissions__c/fields/Airline_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Airline_Upgrade__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Airline Upgrade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>