force-app/main/default/objects/Wholesale_Commissions__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deal</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>