force-app/main/default/objects/Wholesale_Commissions__c/fields/Departure_City_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Surcharge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Departure City Surcharge</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>