force-app/main/default/objects/Wholesale_Commissions__c/fields/HSS__c.field-meta.xml
<CustomField>
    <fullName>HSS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HSS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>