force-app/main/default/objects/Wholesale_Commissions__c/fields/Land_Activities__c.field-meta.xml
<CustomField>
    <fullName>Land_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Land Activities</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>