force-app/main/default/objects/Wholesale_Commissions__c/fields/locked__c.field-meta.xml
<CustomField>
    <fullName>locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>