force-app/main/default/objects/Wholesale_Commissions__c/fields/Solo_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Solo_Supplement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Solo Supplement</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>