force-app/main/default/objects/Wholesale_Commissions__c/validationRules/Is_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Locked</fullName>
    <active>false</active>
    <description>Ensures not percentages change in time.</description>
    <errorConditionFormula>locked__c</errorConditionFormula>
    <errorMessage>Don&apos;t change these percentages. They are locked you will possibly affect orders related to these percentages. If you really need to edit this record, turn off this validation otherwise create a new record with new percentages and update the processes.</errorMessage>
</ValidationRule>